2005-04-07 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b47

	* Change: 3rd Param of array_sort_by_fields is now 'asc' or 'desc' instead of 1/-1.

	* Change: itemOptions in view_photo.php are now a dropdown when no icons are wanted.
		  Settings at file beginning can force dropdown with icons on.

	* Fix: Found untranslated text (!) in classes/Album.php
	  Thanks to Gekow.

	* New: Use phpDocumentor compatible documenting. Will be completed step by step.

	* Change: When embeddd into Mambo $mosConfig_lang is now checked.

	* Change: updated Manifest

	* Fix: reworked bulk user creation.
	       - register globals
	       - email problems

	* New: Added two more possible formats for bulk user creation.

	* CHANGE: moved gallery_mail into a wrapper for MAIL class. Removed gallery_smtp

	* Fix: use of gallery_error instead of errorRow classes/gallery/UserDB.php 
	       when creating new user.

2005-06-30 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b46

	* Fix: Fieldtype for Comment Overview in Setup.

	* Change: moved /errors/ to includes/errors/

	* Change: Added multiple headings in properties to reduce tabs.

2005-06-28 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b45

	* Change: Better Text in edit_appearance.php
	
	* Change: Tweaked placeholder replace.

	* Fix: Removed check for number of custom fields, as it has no default.

	* Fix: Added lib/messages.php to list of translateable files.

	* Fix: function for displaying errorRow was broken.
	
2005-06-28 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b44

	* Fix: removed some more <> inside a Mail header (see b39)

	* Fix: Wrong description in css/screen.css
	
2005-06-27 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b43

	* Fix: Browserlanguange 'en' was not correct mapped to en_US.

	* Fix: Custom Fields were broken in edit_appearance in b39

	* Fix: Code for gifified. from b41.
	
2005-06-27 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.1-cvs-b42

        * Fix: fixed the warning in breadcrumb.php when album disallows
	  upwards navigation.
