@@ -1,3 +1,9 @@
+2005-04-07 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b48
+
+	* Change: Added 4th to array_sort_by_fields: caseSensitive
+
+	* Change: Sort of alphabetical case insensitve of watermark files.
+
 2005-04-07 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b47
 
 	* Change: 3rd Param of array_sort_by_fields is now 'asc' or 'desc' instead of 1/-1.
